--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,10 +1,10 @@
 <web-app>
 	<servlet>
-		<servlet-name>mainServlet</servlet-name>
-		<servlet-class>services.*</servlet-class>
+		<servlet-name>authServlet</servlet-name>
+		<servlet-class>services.AuthentificationServlet</servlet-class>
 	</servlet>
 	<servlet-mapping> 
-		<servlet-name>mainServlet</servlet-name> 
-		<url-pattern>/ok</url-pattern> 
+		<servlet-name>authServlet</servlet-name> 
+		<url-pattern>/authentication</url-pattern> 
 	</servlet-mapping> 
 </web-app>
